# ChangeLog for app-editors/klat
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/klat/Attic/ChangeLog,v 1.6 2004/05/17 15:19:34 usata Exp $

  18 May 2004; Mamoru KOMACHI <usata@gentoo.org> klat-0.4.0.ebuild:
  Changed app-text/tetex to virtual/tetex.

  17 Feb 2004; Dylan Carlson <absinthe@gentoo.org> klat-0.4.0.ebuild:
  added ~amd64 keyword.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*klat-0.4.0 (25 Oct 2002)

  25 Oct 2002; Matthew Turk <satai@gentoo.org> klat-0.4.0.ebuild :
  Initial import.  Ebuild submitted by Gert Thiel <GertThiel@gmx.net>.