@@ -1,3 +1,4 @@
-MD5 314abcebf8683d35f29be418b9d68346 klat-0.4.0.ebuild 535
-MD5 dc56a413fbe36d88eb4edec8493c5adc ChangeLog 666
+MD5 658b0508f5344195a407ebb31a56a88d ChangeLog 777
+MD5 fe9d0247f4212bacc77e5a85e7c62c48 klat-0.4.0.ebuild 549
+MD5 1652522405f5936eb29776ef8d5ffa5b metadata.xml 310
 MD5 e4209a9e2cad02fa761a9ee3e779347a files/digest-klat-0.4.0 63
