@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/klat/Attic/klat-0.4.0.ebuild,v 1.9 2004/05/17 15:19:34 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/klat/Attic/klat-0.4.0.ebuild,v 1.10 2004/06/07 03:54:45 dragonheart Exp $
 
 inherit kde-base
 need-kde 3
@@ -10,6 +10,7 @@ HOMEPAGE="http://lumumba.luc.ac.be/jori/klat/klat.html"
 SRC_URI="http://lumumba.luc.ac.be/jori/klat/${P}.tar.bz2"
 
 LICENSE="GPL-2"
+IUSE=""
 KEYWORDS="x86 ~sparc ~amd64"
 
 DEPEND="$DEPEND virtual/tetex"
