@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/klat
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/klat/Attic/ChangeLog,v 1.6 2004/05/17 15:19:34 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/klat/Attic/ChangeLog,v 1.7 2004/06/07 03:54:45 dragonheart Exp $
+
+  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
+  klat-0.4.0.ebuild:
+  QA - IUSE fix
 
   18 May 2004; Mamoru KOMACHI <usata@gentoo.org> klat-0.4.0.ebuild:
   Changed app-text/tetex to virtual/tetex.
